# gerenciador_tarefas

./: README.md  database.db  pyproject.toml
multiplataform_development_i/: application.py  main.py
multiplataform_development_i/config/: database.py  log_config.py
multiplataform_development_i/controller/: usuario_controller.py
multiplataform_development_i/domain/dto/: dtos.py
multiplataform_development_i/domain/model/: models.py
multiplataform_development_i/repository/: usuario_repository.py
multiplataform_development_i/service/: usuario_service.py
